src/test/deca/context/invalid/created/Objet/Passe_3/ReturnInVoidMethod.deca
// Description:
//    teste un return dans une methode void
// Resultats:
//    ReturnInVoidMethod.deca:8:8: Error: This method does not return anything

class A {
    void m() {
        return 3;
    }
}

{

}